2014-12-02 Fixed problem with getting score from Image Identification addon
2014-12-01 Added changes to Swiffy Animation module
2014-12-01 Fixed adding class navigationbar-page-ok in Navigation Bar module
2014-11-28 Fixed problem with animation in SVG format
2014-11-27 Added Show for pen and Show for marker properties in IWB toolbar
2014-11-27 Fixed problem with rewind to start movie in Android 4.1 in Video module
2014-11-27 Fixed problem with view of Text identification module in editor
2014-11-27 Fixed problem with rewind to start movie in Video module
2014-11-27 Added setPenColor and setDefaultPenThickness commands to IWB toolbar
2014-11-27 Fixed problem with jumpTo in Multi Audio module
2014-11-26 Fixed problem with hiding in Video module
2014-11-26 Fixed problem with images in Multiple gap and Image gap module
2014-11-24 Added Vocabulary audio files properties to Text Audio
2014-11-20 Added Fixed position property, changed displaying rulers and fixed double page view in IWB Toolbar module
2014-11-19 Player saves state of addons in header and footer
2014-11-18 Fixed problem with editor preview in Hierarchical Lesson Report
2014-11-17 Fixed problem with the second advent of Popup
2014-11-14 Fixed issue with skipping words in Text Audio
2014-11-13 Fixed problem with play action and ended event in Video module
2014-11-13 Added isAllOK method and allOK event in Hangman module
2014-11-12 New Player Commands: setNavigationPanelsAutomaticAppearance, showNavigationPanels, hideNavigationPanels
2014-11-06 Added new property "Individual fragment playback" to Text Audio module
2014-11-05 Fixed problem with isAttempted in Math module connected with dropdown gaps
2014-11-04 Fixed problem with saving visibility in Paragraph and Paragraph Keyboard modules
2014-11-04 Fixed problem with getting error Can not load page: null
2014-11-03 Added events "playing" and "stop" to Text Audio module
2014-11-03 Fixed setting width in IWB Toolbar module